enable another non-req FT